--- a/hindari-5-jebakan-membaca-rtp-live.html
+++ b/hindari-5-jebakan-membaca-rtp-live.html
@@ -1462,6 +1462,17 @@
 
 <p>Pemain profesional di kuartal pertama 2026 tidak lagi melihat snapshot. Mereka menganalisis <strong>pita pergerakan (movement band)</strong> RTP Live minimal dalam 6-12 jam terakhir. Tools analisis sederhana kini banyak menyediakan fitur garis atas/bawah yang menunjukkan batas fluktuasi wajar. Jebakan ini berbahaya karena membuat pemain keluar dari game tepat sebelum fase pemulihan (recovery phase) yang justru menguntungkan. Pelajari terlebih dahulu karakteristik fluktuasi harian game pilihan Anda sebelum mengambil kesimpulan dari satu angka semata.</p>
 
+<p><strong>Baca juga konten terbaru:</strong></p>
+<ol>
+  <li><a href="https://ceo-news.github.io/today/tools-gratis-lacak-rtp-live-volatilitas.html">Tools Gratis untuk Pemula: 3 Aplikasi Sederhana Lacak RTP Live dan Volatilitas Game Favorit</a></li>
+  <li><a href="https://ceo-news.github.io/today/cara-membaca-rtp-live-anti-ketipu-2026.html">Cara Membaca RTP Live Biar Tidak Ketipu Angka Tinggi: Teknik Aman untuk Pemula di 2026</a></li>
+  <li><a href="https://ceo-news.github.io/today/5-momen-hindari-saat-rtp-live-bagus.html">5 Momen yang Wajib Kamu Hindari Saat RTP Live Lagi Bagus, Biar Tidak Balik Rugi</a></li>
+  <li><a href="https://ceo-news.github.io/today/3-cara-tentukan-waktu-main-aman-rtp-live.html">3 Cara Sederhana Menentukan Waktu Bermain Game Online yang Aman Berdasarkan Statistik RTP Live</a></li>
+  <li><a href="https://ceo-news.github.io/today/target-profit-harian-tanpa-main-lama-mahjong-ways.html">Cara Membuat Target Profit Harian dari Game Online Tanpa Terjebak Main Mahjong Ways Terlalu Lama/a></li>
+  <li><a href="https://ceo-news.github.io/today/pilih-game-ramah-pemula-dari-rtp-live.html">Cara Memilih Game Online yang Ramah Pemula dari Ciri Statistik RTP Live-nya</a></li>
+</ol>
+
+
 <h2>2. Jebakan Volume Spin: Mengira RTP Live Sama Akuratnya di Segala Level Aktivitas</h2>
 
 <p>Ini adalah kesalahan teknis yang jarang disadari. RTP Live dihitung berdasarkan rasio kemenangan terhadap total taruhan <strong>dalam sampel data terbatas</strong> (biasanya beberapa ribu spin terakhir). Saat volume pemain rendah-misalnya di pagi buta atau pada game niche-sampel data ini menjadi terlalu kecil untuk memberikan gambaran statistik yang stabil. RTP Live 98.5% di game sepi mungkin hanya dihasilkan dari 200 spin, yang secara matematis sangat rentan fluktuasi acak dan tidak merepresentasikan kinerja game sesungguhnya.</p>
